# ebird-api

./: .bumpversion.cfg  .coveragerc  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  CHANGELOG.md  CITATION.cff  LICENSE.txt  MANIFEST.in  Makefile  README.md  TODO.txt  dev-requirements.in  dev-requirements.txt  makefile  pyproject.toml  requirements.in  requirements.txt  setup.py  tox.ini
docs/: ebird-api.yaml
ebird/: __init__.py  base.py  core.py  data.py  product.py  reference.py  utils.py  validation.py
ebird/api/: __init__.py  base.py  checklists.py  client.py  constants.py  data.py  hotspots.py  observations.py  product.py  reference.py  regions.py  statistics.py  taxonomy.py  utils.py  validation.py
ebird/api/scripts/: args.py  base.py  find_regions.py  geo_notable.py  geo_observations.py  geo_species.py  hotspot_notable.py  hotspot_observations.py  hotspot_species.py  hotspot_summary.py  list_hotspots.py  list_regions.py  list_species.py  location_notable.py  location_observations.py  location_species.py  nearest_hotspots.py  nearest_species.py  region_notable.py  region_observations.py  region_species.py  validation.py
ebird/tests/integration/: __init__.py  test_core.py  test_data.py  test_product.py  test_reference.py
ebird/tests/unit/: __init__.py  test_find_locations.py  test_find_regions.py  test_geo_notable.py  test_geo_observations.py  test_geo_species.py  test_hotspot_notable.py  test_hotspot_observations.py  test_hotspot_species.py  test_hotspot_summary.py  test_list_hotspots.py  test_list_locations.py  test_list_regions.py  test_list_species.py  test_location_notable.py  test_location_observations.py  test_location_species.py  test_nearest_hotspots.py  test_nearest_species.py  test_region_notable.py  test_region_observations.py  test_region_species.py  test_validation.py
src/ebird/api/: __init__.py  checklists.py  client.py  constants.py  hotspots.py  observations.py  regions.py  species.py  statistics.py  taxonomy.py  utils.py  validation.py
tests/: test_geo_notable.py  test_geo_species.py  test_hotspot_notable.py  test_hotspot_observations.py  test_hotspot_summary.py  test_list_hotspots.py  test_list_regions.py  test_list_species.py  test_location_observations.py  test_location_species.py  test_nearest_hotspots.py  test_region_notable.py  test_validation.py
tests/acceptance/: client.py
tests/checklists/: test_get_checklist.py  test_get_visits.py
tests/client/: acceptance.py
tests/hotspots/: test_get_hotspot.py  test_get_hotspots.py  test_get_nearby_hotspots.py
tests/integration/: conftest.py  test_get_adjacent_regions.py  test_get_checklist.py  test_get_historic_observations.py  test_get_hotspot.py  test_get_hotspots.py  test_get_location.py  test_get_nearby_hotspots.py  test_get_nearby_notable.py  test_get_nearby_observations.py  test_get_nearby_species.py  test_get_nearest_species.py  test_get_notable_observations.py  test_get_observations.py  test_get_region.py  test_get_regions.py  test_get_species_list.py  test_get_species_observations.py  test_get_taxonomy.py  test_get_taxonomy_forms.py  test_get_taxonomy_groups.py  test_get_taxonomy_locales.py  test_get_taxonomy_versions.py  test_get_top_100.py  test_get_totals.py  test_get_visits.py
tests/mixins/: __init__.py  area_tests.py  back_tests.py  base.py  category_tests.py  detail_tests.py  dist_tests.py  header_tests.py  hotspot_tests.py  lat_tests.py  lng_tests.py  locale_tests.py  location_tests.py  max_checklists_tests.py  max_observations_tests.py  max_observers_tests.py  max_results_tests.py  ordering_tests.py  provisional_tests.py  ranked_by_tests.py  sort_tests.py
tests/observations/: test_get_historic_observations.py  test_get_nearby_notable.py  test_get_nearby_observations.py  test_get_nearby_species.py  test_get_nearest_species.py  test_get_notable_observations.py  test_get_observations.py  test_get_species_observations.py
tests/regions/: test_get_adjacent_regions.py  test_get_region.py  test_get_regions.py
tests/scripts/: find-regions.sh  geo-notable.sh  geo-observations.sh  geo-species.sh  hotspot-notable.sh  hotspot-observations.sh  hotspot-species.sh  hotspot-summary.sh  list-hotspots.sh  list-regions.sh  list-species.sh  location-notable.sh  location-observations.sh  location-species.sh  nearest-hotspots.sh  nearest-species.sh  region-notable.sh  region-observations.sh  region-species.sh
tests/statistics/: test_get_top_100.py  test_get_totals.py
tests/taxonomy/: test_get_taxonomy.py  test_get_taxonomy_forms.py  test_get_taxonomy_groups.py  test_get_taxonomy_versions.py
tests/unit/checklists/: test_get_checklist.py  test_get_visits.py
tests/unit/hotspots/: test_get_hotspot.py  test_get_hotspots.py  test_get_location.py  test_get_nearby_hotspots.py
tests/unit/mixins/: __init__.py  area_tests.py  back_tests.py  category_tests.py  detail_tests.py  dist_tests.py  header_tests.py  hotspot_tests.py  lat_tests.py  lng_tests.py  locale_tests.py  location_tests.py  max_checklists_tests.py  max_observations_tests.py  max_observers_tests.py  ordering_tests.py  provisional_tests.py  ranked_by_tests.py  sort_tests.py
tests/unit/observations/: test_get_historic_observations.py  test_get_nearby_notable.py  test_get_nearby_observations.py  test_get_nearby_species.py  test_get_nearest_species.py  test_get_notable_observations.py  test_get_observations.py  test_get_species_observations.py
tests/unit/regions/: test_get_adjacent_regions.py  test_get_region.py  test_get_regions.py
tests/unit/species/: test_get_species_list.py
tests/unit/statistics/: test_get_top_100.py  (+1 more)
tests/utils/: test_utils.py
tests/validation/: test_clean_area.py  test_clean_areas.py  test_clean_categories.py  test_clean_code.py  test_clean_date.py  test_clean_detail.py  test_clean_dist.py  test_clean_hotspot.py  test_clean_lat.py  test_clean_lng.py  test_clean_locations.py  test_clean_max_results.py  test_clean_ordering.py  test_get_location_type.py  test_get_location_types.py  test_is_location.py  test_is_subnational2.py  test_validation.py
(+46 files in other folders)
