[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 61.0"]

[project]
authors = [
  {name = "Project Babbler", email = "projectbabbler@gmail.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Natural Language :: English",
    "Topic :: Utilities",
    "Topic :: Internet",
]
description = 'Wrapper for accessing the eBird API'
keywords = ["eBird", "API", "client"]
license = {text = "MIT License"}
name = "ebird-api"
readme = "README.md"
requires-python = ">= 3.8"
version = "3.0.7"

[project.urls]
Repository = "https://github.com/ProjectBabbler/ebird-api.git"
Issues = "https://github.com/ProjectBabbler/ebird-api/issues"
Changelog = "https://github.com/ProjectBabbler/ebird-api/blob/master/CHANGELOG.md"

[tool.black]
# Notes:
#
# line-length: this is just the default but it's included here so it's easy
# to see that the value is synced with other code quality tools.
#
# target-version: the python version is set when the project is generated
# so we might as well make use of it.
#
# exclude: the regex for excluding migrations is added in case you don't
# want them reformatted.
#
# For all options see:
#   https://black.readthedocs.io/en/stable/installation_and_usage.html

line-length = 88
target-version = ["py312"]

[tool.bumpversion]
current_version = "3.0.7"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
ignore_missing_version = false
tag = true
sign_tags = true
tag_name = "v{new_version}"
tag_message = "New version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "New version: {current_version} → {new_version}"
commit_args = ""

[[tool.bumpversion.files]]
filename = "src/ebird/api/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "## [Unreleased]"
replace = "## [{new_version}] - {now:%Y-%m-%d}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "CITATION.cff"
search = "version: {current_version}"
replace = "version: {new_version}"

[[tool.bumpversion.files]]
filename = "CITATION.cff"
search = "^date-released: \\d{{4}}-\\d{{2}}-\\d{{2}}$"
replace = "date-released: {now:%Y-%m-%d}"
regex = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true

[tool.pytest.ini_options]
pythonpath = [
  "."
]
testpaths = [
    "tests/unit"
]
